Update immutable list creation
After JDK 9, we can create immutable list from List.of directly. See https://docs.oracle.com/javase/10/core/creating-immutable-lists-sets-and-maps.htm#JSCOR-GUID-DB0865D2-C052-40BC-A3DC-20FCB3088DC9